--- a/Energy.App.Standalone/Features/Analysis/HeatingMeter.razor
+++ b/Energy.App.Standalone/Features/Analysis/HeatingMeter.razor
@@ -1,7 +1,8 @@
 ﻿@page "/HeatingMeter/{MeterTypeName}"
 @using System.Runtime.InteropServices
-@using Energy.App.Standalone.Features.AppInit.Store.OldAppInit
-@using Energy.App.Standalone.Features.EnergyReadings.Electricity.Store
+@using Energy.App.Standalone.Features.AppInit.Store
+@using Energy.App.Standalone.Features.EnergyReadings.Electricity.Store;
+@using Energy.App.Standalone.Features.Analysis.Store.HeatingForecast
 @inherits FluxorComponent
 @inject IDispatcher Dispatcher
 
@@ -22,28 +23,16 @@
     [Parameter]
     public string MeterTypeName { get; set; }
 
-    [Inject]
-    public AppInit AppInit { get; set; }
-
     MeterType _meterType;
     
     bool _ready = false;
-    [Inject]
-    IState<ElectricityReadingsState> ElectricityReadingsState { get; set; }
 
-    [Inject]
-    IState<GasReadingsState> GasReadingsState { get; set; }
 
     protected override void OnParametersSet()
     {
         base.OnParametersSet();
         _meterType = MeterTypeName.eStringToEnum<MeterType>();
-        
-        SubscribeToAction<NotifyHeatingForecastReadyAction>(_ =>
-        {
-            _ready = true;
-            InvokeAsync(StateHasChanged);
-        });
+        _ready = true;
     }
 
 }
