Weather  & Data Loader

--- a/Energy.App.Standalone/Features/Weather/Pages/FetchData.razor
+++ b/Energy.App.Standalone/Features/Weather/Pages/FetchData.razor
@@ -64,9 +64,11 @@ else
 
 @code {
 
-    private void LoadWeatherData()
+    private async Task LoadWeatherData()
     {
-        Dispatcher.Dispatch(new InitiateWeatherReloadReadingsAction(Outcode));
+        var completion = new TaskCompletionSource<bool>();
+        Dispatcher.Dispatch(new LoadWeatherAction(false, completion));
+        await completion.Task;
     }
 
     public string Outcode { get; set; }
