--- a/Energy.App.Standalone/Pages/Index.razor
+++ b/Energy.App.Standalone/Pages/Index.razor
@@ -1,10 +1,6 @@
 ﻿@page "/"
-@using Energy.App.Standalone.Features.AppInit
-@inherits Fluxor.Blazor.Web.Components.FluxorComponent
 
 <PageTitle>Welcome</PageTitle>
 
-
-
-<AppInitializeLoaders />
+<h2>Ready</h2>
 
