Tariffs on MeterSetupState

--- a/Energy.App.Standalone/Features/Analysis/EnergyTemperatureChart.razor
+++ b/Energy.App.Standalone/Features/Analysis/EnergyTemperatureChart.razor
@@ -2,6 +2,7 @@
 @using Energy.App.Standalone.Features.EnergyReadings.Electricity.Store;
 @using Energy.App.Standalone.Features.EnergyReadings.Gas;
 @using Energy.App.Standalone.Features.Analysis.Store.HeatingForecast;
+@using Energy.App.Standalone.Features.Setup.Store.MeterSetupStore;
 @inherits FluxorComponent     
 @implements IAsyncDisposable     
 @inject IJSRuntime JsRuntime
