--- a/Energy.App.Standalone/Features/AppInit/AppInitializeLoaders.razor
+++ b/Energy.App.Standalone/Features/AppInit/AppInitializeLoaders.razor
@@ -1,8 +1,9 @@
-﻿@    using Energy.App.Standalone.Features.Analysis.Store.HeatingForecast;
-@    using Energy.App.Standalone.Features.AppInit.Store;
-@    using Energy.App.Standalone.Features.EnergyReadings.Electricity.Store;
-@    using Energy.App.Standalone.Features.EnergyReadings.Gas;
-@    using Microsoft.Extensions.FileSystemGlobbing.Abstractions
+﻿@using Energy.App.Standalone.Features.Analysis.Store.HeatingForecast;
+@using Energy.App.Standalone.Features.AppInit.Store;
+@using Energy.App.Standalone.Features.EnergyReadings.Electricity.Store;
+@using Energy.App.Standalone.Features.EnergyReadings.Gas;
+@using Energy.App.Standalone.Features.Setup.Store.MeterSetupStore
+@using Microsoft.Extensions.FileSystemGlobbing.Abstractions
 @inherits FluxorComponent
 @inject IDispatcher Dispatcher
 
