--- a/Energy.App.Standalone/Shared/MainLayout.razor
+++ b/Energy.App.Standalone/Shared/MainLayout.razor
@@ -16,7 +16,9 @@
     </MudDrawer>
     <MudMainContent>
         <MudContainer>
+            <DataValidatorBase>
             @Body
+            </DataValidatorBase>
         </MudContainer>
     </MudMainContent>
 </MudLayout>
