--- a/Energy.App.Standalone/Shared/NavMenu.razor
+++ b/Energy.App.Standalone/Shared/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿@using Energy.App.Standalone.Features.Setup.Store.ImmutatableStateObjects;
+﻿@using Energy.App.Standalone.Features.Setup.Store.MeterSetupStore;
 @inherits FluxorComponent
 
 <MudPaper class="py-3" Elevation="0">
