--- a/Energy.App.Standalone/Features/Setup/Pages/AddGasMeter.razor
+++ b/Energy.App.Standalone/Features/Setup/Pages/AddGasMeter.razor
@@ -1,4 +1,5 @@
 ﻿@page "/AddGasMeter"
+@using Energy.App.Standalone.Features.Setup.Store.MeterSetupStore;
 @inherits FluxorComponent
 @inject IState<MeterSetupState> MeterSetupState
 @inject IDispatcher Dispatcher
@@ -72,9 +73,7 @@
 
     protected override void OnParametersSet()
     {
-        SubscribeToAction<NotifyGasMeterInitialSetupValidAction>(SetupValidAction);
         MapGasMeter();
-
     }
 
     private void MapGasMeter()
@@ -92,22 +91,18 @@
 
     }
 
-    private void SetupValidAction(NotifyGasMeterInitialSetupValidAction action)
-    {
-        MapGasMeter();
-        ShowSuccessMessage();
-    }
 
     private async Task HandleValidSubmit()
     {
         if (_addingNotUpdating)
         {
-            Dispatcher.Dispatch(new GasMeterInitialAddAction(GasMeter));
+            Dispatcher.Dispatch(new AddGasAction(GasMeter));
         }
         else
         {
-            Dispatcher.Dispatch(new GasMeterInitialUpdateAction(GasMeter));
+            Dispatcher.Dispatch(new UpdateGasAction(GasMeter));
         }
+        ShowSuccessMessage();
     }
 
     private void ShowSuccessMessage()
