--- a/Energy.App.Standalone/Features/Setup/Pages/MeterAuthorization.razor
+++ b/Energy.App.Standalone/Features/Setup/Pages/MeterAuthorization.razor
@@ -1,4 +1,5 @@
 ﻿@page "/MeterAuthorization/{MeterTypeText}"
+@using Energy.App.Standalone.Features.Setup.Store.MeterSetupStore;
 @inherits FluxorComponent
 @inject IState<MeterSetupState> MeterSetupState
 @inject IState<HouseholdState> HouseholdState
@@ -91,11 +92,11 @@
             switch (_meterType)
             {
                 case MeterType.Gas:
-                    Dispatcher.Dispatch(new GasMeterSuccessfulAuthorizationAction());
+                    Dispatcher.Dispatch(new AuthorizeGasAction());
                     Dispatcher.Dispatch(new GasReloadReadingsAndCostsAction());
                     break;
                 case MeterType.Electricity:
-                    Dispatcher.Dispatch(new ElectricityMeterSuccessfulAuthorizationAction());
+                    Dispatcher.Dispatch(new AuthorizeElectricityAction());
                     Dispatcher.Dispatch(new ElectricityReloadReadingsAndCostsAction());
 
                     break;
