--- a/Energy.App.Standalone/Features/Setup/Weather/Pages/WeatherDataInfo.razor
+++ b/Energy.App.Standalone/Features/Setup/Weather/Pages/WeatherDataInfo.razor
@@ -81,8 +81,8 @@
 
     private async void LoadWeatherData(NotifyHouseholdUpdatedAction _)
     {
-        var completion = new TaskCompletionSource<bool>();
-        Dispatcher.Dispatch(new LoadWeatherAction(true, completion));
+        var completion = new TaskCompletionSource<int>();
+        Dispatcher.Dispatch(new EnsureWeatherLoadedAction(true, completion));
         await completion.Task;
     }
 
