--- a/Energy.App.Standalone/Features/Setup/Meter/Pages/MeterSetupTable.razor
+++ b/Energy.App.Standalone/Features/Setup/Meter/Pages/MeterSetupTable.razor
@@ -5,6 +5,13 @@
     <MudText Typo="Typo.h5">Meter Setup</MudText>
 </MudPaper>
 
+<MudOverlay @bind-Visible="Reloading" DarkBackground="true" ZIndex="9">
+
+    <MudText Typo="Typo.h4">Reloading Gas Readings</MudText>
+    <div class="spinner"></div>
+
+</MudOverlay>
+
 <MudTable Items="@_meterStatusList.Values" Breakpoint="Breakpoint.Sm">
     <HeaderContent>
         <MudTh>Type</MudTh>
