--- a/Energy.App.Standalone/wwwroot/css/app.css
+++ b/Energy.App.Standalone/wwwroot/css/app.css
@@ -133,3 +133,31 @@ a, .btn-link {
     width: 100%;
     height: 90%;
 }
+
+.spinner {
+    margin: 100px auto;
+    width: 40px;
+    height: 40px;
+    position: relative;
+}
+
+    .spinner::before {
+        content: '';
+        display: block;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        border: 3px solid #333;
+        border-top-color: transparent;
+        animation: spin 1s linear infinite;
+    }
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
