--- a/Energy.App.Standalone/Features/Analysis/CurrentPeriodAnalysisCard.razor
+++ b/Energy.App.Standalone/Features/Analysis/CurrentPeriodAnalysisCard.razor
@@ -15,8 +15,8 @@
                 <strong>To Date</strong>
             </MudText>
             <MudPaper Class="d-flex justify-start flex-wrap" Elevation="0">
-                <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@Icons.Material.Filled.CurrencyPound">@TotalsSoFar.PeriodCostPounds.eToMoneyFormat()</MudChip>
-                <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@Icons.Material.Filled.SouthAmerica">@TotalsSoFar.PeriodCo2 kgCO<sub>2</sub></MudChip>
+                <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@Icons.Material.Filled.CurrencyPound">@CurrentPeriodAnalysisToDate.PeriodCostPounds.eToMoneyFormat()</MudChip>
+                <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@Icons.Material.Filled.SouthAmerica">@CurrentPeriodAnalysisToDate.PeriodCo2 kgCO<sub>2</sub></MudChip>
             </MudPaper>
         }
         <MudText Class="ml-1" Typo="Typo.caption">
@@ -25,9 +25,9 @@
 
         <MudPaper Class="d-flex justify-start flex-wrap" Elevation="0">
 
-            <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@Icons.Material.Filled.CurrencyPound">@TotalsForecast.ForecastCostPounds.eToMoneyFormat()</MudChip>
-            <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@_consumptionIcon">@TotalsForecast.ForecastConsumption kWh</MudChip>
-            <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@Icons.Material.Filled.SouthAmerica">@TotalsForecast.ForecastCo2 kgCO<sub>2</sub></MudChip>
+            <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@Icons.Material.Filled.CurrencyPound">@CurrentPeriodAnalysis.ForecastCostPounds.eToMoneyFormat()</MudChip>
+            <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@_consumptionIcon">@CurrentPeriodAnalysis.ForecastConsumption kWh</MudChip>
+            <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@Icons.Material.Filled.SouthAmerica">@CurrentPeriodAnalysis.ForecastCo2 kgCO<sub>2</sub></MudChip>
         </MudPaper>
 
         @if (PrimaryHeatSource)
@@ -35,7 +35,7 @@
             <MudDivider DividerType="DividerType.Middle"></MudDivider>
             <MudPaper Class="my-2 d-flex justify-center" Elevation="0">
 
-                <MudChip Icon="@Icons.Material.Filled.Thermostat" Color="Color.Transparent" Style="@TotalsForecast.TemperatureRange.TemperatureColourStyle">@_temperatureText</MudChip>
+                <MudChip Icon="@Icons.Material.Filled.Thermostat" Color="Color.Transparent" Style="@CurrentPeriodAnalysis.TemperatureRange.TemperatureColourStyle">@_temperatureText</MudChip>
 
             </MudPaper>
         }
@@ -65,10 +65,10 @@
     public CalendarTerm Term { get; set; }
 
     [Parameter, EditorRequired]
-    public HistoricalAnalysis TotalsSoFar { get; set; }
+    public HistoricalAnalysis CurrentPeriodAnalysisToDate { get; set; }
 
     [Parameter, EditorRequired]
-    public ForecastAnalysis TotalsForecast { get; set; }
+    public ForecastAnalysis CurrentPeriodAnalysis { get; set; }
 
     [Inject]
     IState<AnalysisOptionsState> AnalysisOptionsState { get; set; }
@@ -87,9 +87,9 @@
         base.OnParametersSet();
 
         _analysisOptionsActionFactory = new AnalysisOptionsActionFactory(MeterType);
-        _headerText = Term.AnalysisPeriodHeader(RelativePeriod.Current, TotalsSoFar.Start);
-        _rangeText = Term.AnalysisPeriodHeader(RelativePeriod.Current, TotalsSoFar.Start);
-        _temperatureText = Term.AnalysisPeriodTemperatureText(RelativePeriod.Current, TotalsForecast.TemperatureRange);
+        _headerText = Term.AnalysisPeriodHeader(RelativePeriod.Current, CurrentPeriodAnalysisToDate.Start);
+        _rangeText = Term.AnalysisPeriodDateRangeText(RelativePeriod.Current, CurrentPeriodAnalysis.Start, CurrentPeriodAnalysis.End);
+        _temperatureText = Term.AnalysisPeriodTemperatureText(RelativePeriod.Current, CurrentPeriodAnalysis.TemperatureRange);
         _consumptionIcon = MeterType == MeterType.Electricity ? Icons.Material.Filled.ElectricBolt : Icons.Material.Filled.LocalFireDepartment;
 
         _highlightToggled = AnalysisOptionsState.Value[MeterType].ToggleSource == ToggleSource.Current;
@@ -99,7 +99,7 @@
     {
         if (toggled)
         {
-            var setHighlightAction = _analysisOptionsActionFactory.Create(AnalysisAction.SetHighlightRange, ToggleSource.Current, TotalsSoFar.Start, TotalsForecast.End);
+            var setHighlightAction = _analysisOptionsActionFactory.Create(AnalysisAction.SetHighlightRange, ToggleSource.Current, CurrentPeriodAnalysisToDate.Start, CurrentPeriodAnalysis.End);
             Dispatcher.Dispatch(setHighlightAction);
         }
         else
