--- a/Energy.App.Standalone/Features/Analysis/EnergyTemperatureChart.razor
+++ b/Energy.App.Standalone/Features/Analysis/EnergyTemperatureChart.razor
@@ -1,9 +1,7 @@
-﻿
-
-@inherits FluxorComponent     
+﻿@inherits FluxorComponent
 @using Energy.App.Standalone.Features.Setup.Weather.Store
 @using Energy.App.Standalone.Features.Setup.Meter.Store
-@implements IAsyncDisposable     
+@implements IAsyncDisposable
 @inject IJSRuntime JsRuntime
 
 @if (_ready)
@@ -65,6 +63,16 @@
         _ready = true;
     }
 
+    DateTime _latestReadingTime;
+
+    private List<ChartDailyForecastReading> GetChartDailyForecastReadings(DateTime latestReadingTime)
+    {
+        var forecastDailyCosts = HeatingForecastState.Value.ForecastDailyCosts;
+        var applicableForecastCosts = forecastDailyCosts.Where(c => c.UtcTime > latestReadingTime);
+
+        var forecastChartReadings = applicableForecastCosts.Select(Mapping.MapToChartReading).ToList();
+        return forecastChartReadings;
+    }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
@@ -82,26 +90,22 @@
 
             var chartReadings = costedReadings.Select(Mapping.MapToChartReading).ToList();
 
-            var forecastDailyCosts = HeatingForecastState.Value.ForecastDailyCosts;
-            var applicableForecastCosts = forecastDailyCosts.Where(c => c.UtcTime > latestReading.UtcTime);
+            var forecastChartReadings = GetChartDailyForecastReadings(latestReading.UtcTime);
 
-            var forecastChartReadings = applicableForecastCosts.Select(Mapping.MapToChartReading).ToList();
-
-            
             var firstReadingTicks = firstReading.UtcTime.eToUnixTicksNoOffset();
             var latestReadingTicks = chartReadings.Last().DateTicks;
 
 
             var temperatureIconPoints = WeatherState.Value.WeatherReadings
                 .Where(c => c.UtcTime.eToUnixTicksNoOffset() >= firstReadingTicks)
-                .Select(c => new TemperatureIconPoint()
-                {
-                    DateTicks = c.UtcTime.eToUnixTicksNoOffset(),
-                    TemperatureCelsius = c.TemperatureAverage,
-                    TemperatureCelsiusUnmodified = c.TemperatureAverage,
-                    Summary = c.Summary ?? string.Empty,
+                .Select(c => new TemperaturePoint()
+                    {
+                        DateTicks = c.UtcTime.eToUnixTicksNoOffset(),
+                        TemperatureCelsius = c.TemperatureAverage,
+                        TemperatureCelsiusUnmodified = c.TemperatureAverage,
+                        Summary = c.Summary ?? string.Empty,
 
-                }).ToList();
+                    }).ToList();
 
 
             var meterChartProfile = new MeterChartProfile()
@@ -116,9 +120,13 @@
                     ChartReadings = chartReadings,
                     ChartDailyForecastReadings = forecastChartReadings
                 };
-            
+
+            _latestReadingTime = latestReading.UtcTime;
+
 
             await JsRuntime.InvokeVoidAsync("ChartFunctions.setChart", $"profile-chart-meter-{MeterGlobalId}", meterChartProfile, temperatureIconPoints);
+
+
             _chartRendered = true;
         }
     }
@@ -135,9 +143,9 @@
 
 
         await JsRuntime.InvokeVoidAsync(
-            "ChartFunctions.highlightRange", 
-            $"profile-chart-meter-{MeterGlobalId}", 
-            startTicks, 
+            "ChartFunctions.highlightRange",
+            $"profile-chart-meter-{MeterGlobalId}",
+            startTicks,
             endTicks);
     }
 
@@ -153,21 +161,17 @@
 
     private async void OnDegreeDifferenceHandler(decimal degreeDifference)
     {
-        if (MeterType.Electricity != MeterType)
-        {
-            return;
-        }
 
         if (!_chartRendered)
         {
             return;
         }
 
-        // var chartReadings = forecastCosts.Where(c => c.LocalTime > latestReading).
-        //     Select(Mapping.MapToChartReading).
-        //     ToList();
-        //
-        // await JsRuntime.InvokeVoidAsync("ChartFunctions.setForecastSeries", $"profile-chart-meter-{MeterGlobalId}", chartReadings, degreeDifference);
+        var chartReadings = GetChartDailyForecastReadings(_latestReadingTime);
+
+        await JsRuntime.InvokeVoidAsync("ChartFunctions.setForecastSeries",
+                $"profile-chart-meter-{MeterGlobalId}",
+                chartReadings, degreeDifference);
     }
 
     private async void OnToggledCostChangedHandler(bool showCost)
