Start NonHeating, Weather Summaries

--- a/Energy.App.Standalone/Features/Analysis/CurrentPeriodAnalysisCard.razor
+++ b/Energy.App.Standalone/Features/Analysis/CurrentPeriodAnalysisCard.razor
@@ -46,9 +46,9 @@
                                  ToggledChanged="ToggleHighlight"
                                  Variant="Variant.Filled"
                                  Icon="@Icons.Material.Filled.ZoomIn" Color="@Color.Secondary"
-                                 Title="Highlight"
+                                 Title="Zoom in"
                                  ToggledIcon="@Icons.Material.Filled.ZoomOut"
-                                 ToggledColor="@Color.Tertiary" ToggledTitle="Highligted"/>
+                                 ToggledColor="@Color.Tertiary" ToggledTitle="Zoom out" />
         </MudCardActions>
     </MudCardContent>
 </MudCard>
