--- a/Energy.App.Standalone/Features/Analysis/HistoricalAnalysisCard.razor
+++ b/Energy.App.Standalone/Features/Analysis/HistoricalAnalysisCard.razor
@@ -33,9 +33,9 @@
                                  ToggledChanged="ToggleHighlight"
                                  Variant="Variant.Filled"
                                  Icon="@Icons.Material.Filled.ZoomIn" Color="@Color.Secondary" 
-                                 Title="Highlight"
+                                 Title="Zoom in"
                                  ToggledIcon="@Icons.Material.Filled.ZoomOut"
-                                 ToggledColor="@Color.Dark" ToggledTitle="Highligted"/>
+                                 ToggledColor="@Color.Tertiary" ToggledTitle="Zoom out" />
 
 
         </MudCardActions>
